Attempted to fix alignment and fized broken JS

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -6,22 +6,19 @@
   }
   header {
     text-align: center;
-    padding: 10px;
-    color: #fff;
-    background-color: #6ca1b6;
-    border-radius: 15%;
-    margin-bottom: 30px;
+    color: #FFF;
+    margin: 30px;
   }
 
+.col{
+  flex-grow: 0;
+}
+
+.row{
+  flex-grow: 0;
+}
   body {
     background-color: #6ca1b6;
-    background-repeat: no-repeat;
-    font-family: Arial;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: flex-end;
   }
   
   .i {
@@ -34,29 +31,20 @@
     text-align: center;
   }
 
-  .box {
-    width: 17vw;
-    margin: 0px 30px;
-  }
 
 .card h6{
     padding-top: 15px;
     text-decoration: none;
 }
 
-
-  .products {
-    flex: 4;
-    padding: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-end;
-    
-  }
-  
   a{
     font-family: 'Kanit', sans-serif;
+    color: var(--blue);
+  }
+
+  a:hover{
+    text-decoration: none;
+    color: var(--blue);
   }
 
   h1 {
@@ -72,30 +60,34 @@
     padding-bottom: 60px;
     border-bottom: 2px solid #FFF;
   }
-  @media (max-width: 1440px) {
-    #homeIcons{
-      width: auto;
-    }
+  @media (max-width: 2560px) {
     .box {
+      width: 10vw;
+      margin: 10px 20px;
+    }
+  }
+  @media (max-width: 1440px) {
+    .box {
+      width: 17vw;
       margin: 10px 20px;
     }
   }
   @media (max-width: 768px) {
     .box {
       width: 40vw;
-      margin: 10px 20px;
+      margin: 10px 0px;
     }
 }
   @media (max-width: 426px) {
     .box {
-      width: 40vw;
+      width: 84vw;
       margin: 10px 20px;
     }
 }
 
 @media (max-width: 376px) {
   .box {
-    width: 90vw;
+    width: 80vw;
     margin: 10px 20px;
   }
 }
